platform/x86/tuxedo: Prevent invalid Kconfig state
It was possible to create a uncompileable config, because of missing
"Depends on" statements in the new Kconfig of the TUXEDO platform driver.

Signed-off-by: Werner Sembach <wse@tuxedocomputers.com>
Reported-by: Randy Dunlap <rdunlap@infradead.org>
Closes: https://lore.kernel.org/all/a1d9134f-0567-4a53-a1e7-a55cd6b189a9@infradead.org/
Link: https://lore.kernel.org/r/20250512125450.31072-1-wse@tuxedocomputers.com
Reviewed-by: Ilpo Järvinen <ilpo.jarvinen@linux.intel.com>
Reviewed-by: Randy Dunlap <rdunlap@infradead.org>
Tested-by: Randy Dunlap <rdunlap@infradead.org>
Signed-off-by: Ilpo Järvinen <ilpo.jarvinen@linux.intel.com>

--- a/drivers/platform/x86/tuxedo/nb04/Kconfig
+++ b/drivers/platform/x86/tuxedo/nb04/Kconfig
@@ -7,6 +7,8 @@
 
 config TUXEDO_NB04_WMI_AB
 	tristate "TUXEDO NB04 WMI AB Platform Driver"
+	depends on ACPI_WMI
+	depends on HID
 	help
 	  This driver implements the WMI AB device found on TUXEDO notebooks
 	  with board vendor NB04. This enables keyboard backlight control via a
