--- a/tools/power/cpupower/cpupower-service.conf
+++ b/tools/power/cpupower/cpupower-service.conf
@@ -2,7 +2,11 @@
 # Copyright (C) 2012, Sébastien Luttringer
 # Copyright (C) 2024-2025, Francesco Poli <invernomuto@paranoici.org>
 
-# Default file for linux-cpupower
+# Configuration file for cpupower.service systemd service unit
+#
+# Edit this file (uncommenting at least one of the options, depending on
+# your preferences) and then enable cpupower.service, if you want cpupower
+# to run at boot with these settings.
 
 # --- CPU clock frequency ---
 
@@ -15,14 +19,14 @@
 #MIN_FREQ="2.25GHz"
 #MAX_FREQ="3GHz"
 
-# Specific frequency to be set.
+# Set a specific frequency
 # Requires userspace governor to be available.
 # If this option is set, all the previous frequency options are ignored
 #FREQ=
 
 # --- CPU policy ---
 
-# Sets a register on supported Intel processore which allows software to convey
+# Set a register on supported Intel processore which allows software to convey
 # its policy for the relative importance of performance versus energy savings to
 # the processor. See man CPUPOWER-SET(1) for additional details
 #PERF_BIAS=
