--- a/tools/power/cpupower/cpupower.service.in
+++ b/tools/power/cpupower/cpupower.service.in
@@ -1,6 +1,6 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 # Copyright (C) 2012-2020, Sébastien Luttringer
-# Copyright (C) 2024, Francesco Poli <invernomuto@paranoici.org>
+# Copyright (C) 2024-2025, Francesco Poli <invernomuto@paranoici.org>
 
 [Unit]
 Description=Apply cpupower configuration
@@ -8,7 +8,7 @@ ConditionVirtualization=!container
 
 [Service]
 Type=oneshot
-EnvironmentFile=-___CDIR___default/cpupower
+EnvironmentFile=-___CDIR___cpupower-service.conf
 ExecStart=___LDIR___/cpupower
 RemainAfterExit=yes
 
