netlink: specs: rt-link: add C naming info for ovpn
C naming info for OVPN which was added since I adjusted
the existing attrs. Also add missing reference to a header needed
for a bridge struct.

Reviewed-by: Donald Hunter <donald.hunter@gmail.com>
Link: https://patch.msgid.link/20250515231650.1325372-2-kuba@kernel.org
Signed-off-by: Jakub Kicinski <kuba@kernel.org>

--- a/Documentation/netlink/specs/rt-link.yaml
+++ b/Documentation/netlink/specs/rt-link.yaml
@@ -594,6 +594,7 @@ definitions:
         name: reasm-overlaps
   - name: br-boolopt-multi
     type: struct
+    header: linux/if_bridge.h
     members:
       -
         name: optval
@@ -826,6 +827,8 @@ definitions:
       - name: default
   -
     name: ovpn-mode
+    enum-name: ovpn-mode
+    name-prefix: ovpn-mode
     type: enum
     entries:
       - p2p
@@ -2195,6 +2198,7 @@ attribute-sets:
         type: u16
   -
     name: linkinfo-ovpn-attrs
+    name-prefix: ifla-ovpn-
     attributes:
       -
         name: mode
